; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_citus_tools.c_ExecuteRemoteQueryOrCommand.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_citus_tools.c_ExecuteRemoteQueryOrCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@FORCE_NEW_CONNECTION = common dso_local global i32 0, align 4
@CONNECTION_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c"failed to connect to %s:%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i8*, i32)* @ExecuteRemoteQueryOrCommand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ExecuteRemoteQueryOrCommand(i8* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_7__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %15 = load i32, i32* @FORCE_NEW_CONNECTION, align 4
  store i32 %15, i32* %10, align 4
  %16 = load i32, i32* %10, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call %struct.TYPE_7__* @GetNodeConnection(i32 %16, i8* %17, i64 %18)
  store %struct.TYPE_7__* %19, %struct.TYPE_7__** %11, align 8
  store i32 0, i32* %12, align 4
  store i32* null, i32** %13, align 8
  store i32 1, i32* %14, align 4
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @PQstatus(i32 %22)
  %24 = load i64, i64* @CONNECTION_OK, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %32

26:                                               ; preds = %4
  %27 = load i32, i32* %9, align 4
  %28 = load i8*, i8** %6, align 8
  %29 = load i64, i64* %7, align 8
  %30 = trunc i64 %29 to i32
  %31 = call i32 @appendStringInfo(i32 %27, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* %28, i32 %30)
  store i32 0, i32* %5, align 4
  br label %48

32:                                               ; preds = %4
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = call i32 @SendRemoteCommand(%struct.TYPE_7__* %33, i8* %34)
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %37 = load i32, i32* %14, align 4
  %38 = call i32* @GetRemoteCommandResult(%struct.TYPE_7__* %36, i32 %37)
  store i32* %38, i32** %13, align 8
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %40 = load i32*, i32** %13, align 8
  %41 = load i32, i32* %9, align 4
  %42 = call i32 @EvaluateQueryResult(%struct.TYPE_7__* %39, i32* %40, i32 %41)
  store i32 %42, i32* %12, align 4
  %43 = load i32*, i32** %13, align 8
  %44 = call i32 @PQclear(i32* %43)
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %46 = call i32 @CloseConnection(%struct.TYPE_7__* %45)
  %47 = load i32, i32* %12, align 4
  store i32 %47, i32* %5, align 4
  br label %48

48:                                               ; preds = %32, %26
  %49 = load i32, i32* %5, align 4
  ret i32 %49
}

declare dso_local %struct.TYPE_7__* @GetNodeConnection(i32, i8*, i64) #1

declare dso_local i64 @PQstatus(i32) #1

declare dso_local i32 @appendStringInfo(i32, i8*, i8*, i32) #1

declare dso_local i32 @SendRemoteCommand(%struct.TYPE_7__*, i8*) #1

declare dso_local i32* @GetRemoteCommandResult(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @EvaluateQueryResult(%struct.TYPE_7__*, i32*, i32) #1

declare dso_local i32 @PQclear(i32*) #1

declare dso_local i32 @CloseConnection(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
